--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<h1> teste </h1>
+<h1> Testando GIT </h1>
+<h2>
+  TESTEEEEEEE
+</h2>
 
 <body>
   <script src="script.js"></script>
